# On-The-Money-finance-tracker

./: .clang-tidy  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_INTEGRATION_PLAN.md  BRAIN.md  CMakeLists.txt  Caddyfile  Dockerfile  PLAID_INTEGRATION_PLAN.md  README.md  SECURITY.md  build.gradle  docker-compose.prod.yml  docker-compose.yml  future_changes.txt  nginx.conf  privacy.html  vcpkg.json
.github/workflows/: ci.yml  deploy.yml
app/: build.gradle  settings.gradle
app/src/main/resources/: application.properties
app/src/test/resources/: application.properties
engine/: CMakeLists.txt  README.md  vcpkg.json
engine/docs/: engine-protocol.md
engine/include/: account.h  engine_core.h  monte_carlo.h  portfolio.h  transaction.h
engine/scripts/: check_format.sh  valgrind.sh
engine/src/: CMakeLists.txt
engine/src/engine_core/: account.cpp  engine_core.cpp  main.cpp  monte_carlo.cpp  portfolio.cpp  transaction.cpp
engine/tests/: CMakeLists.txt  monte_carlo_tests.cpp
engine/tests/unit/: account_tests.cpp  portfolio_tests.cpp  transaction_tests.cpp
include/: account.h  portfolio.h  transaction.h
ios/OnTheMoney/: Info.plist
ios/OnTheMoney/OnTheMoney/: APIClient.swift  AccountDetailView.swift  AccountEditView.swift  AccountsView.swift  ContentView.swift  Models.swift  OnTheMoneyApp.swift  PinpadView.swift  PlaidLinkView.swift  PortfolioView.swift  ProfileView.swift  ProjectionsView.swift  StatusResponse.swift  StockDetailView.swift  StocksView.swift  Theme.swift  TransactionDetailView.swift
ios/OnTheMoney/OnTheMoney.xcodeproj/: project.pbxproj
ios/OnTheMoney/OnTheMoney/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/OnTheMoney/OnTheMoney/Assets.xcassets/LogoFull.imageset/: Contents.json
java-api/: README.md  build.gradle
java-api/src/main/java/com/onthemoney/: OnTheMoneyApplication.java
java-api/src/main/resources/: application.properties
java-api/src/test/java/com/onthemoney/: OnTheMoneyApplicationTests.java
java-api/src/test/resources/: application.properties
scripts/: check_format.sh  valgrind.sh
src/: CMakeLists.txt
src/app/: account.cpp  main.cpp  portfolio.cpp
src/main/java/com/onthemoney/: OnTheMoneyApplication.java
src/main/resources/: application.properties
src/test/java/com/onthemoney/: OnTheMoneyApplicationTests.java
src/test/resources/: application.properties
tests/: CMakeLists.txt
tests/unit/: portfolio_tests.cpp
(+51 files in other folders)
